# hashi-graph

./: .gitignore  AUXILIARY_LOSSES.md  BUGFIXES.md  MASKING_IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml  requirements.txt  test_edges_cross.py  test_masking.py
.mlop/hashi-graph/train-gnn/: sys.json
configs/: ar_solver.yaml  base_config.yaml  gat_solver.yaml  gine_solver.yaml  masking_experiment.yaml  transformer_solver.yaml  tune_config.yaml
docs/: perfect_puzzle_metrics.md
generator/: Makefile  bridges_gen  bridges_gen.c
notebooks/: README.md  evaluation_script.py  model_evaluation.ipynb  yo.ipynb
plans/: enhancements.md
src/: bridges_gen.py  callbacks.py  data.py  engine.py  evaluate_model.py  evaluation_utils.py  losses.py  tracking.py  train.py  train_utils.py  tune.py  tune_space.py  utils.py  yo2.py
src/hashi_puzzle_solver/: ar_solver.py  bridges_gen.py  bridges_utils.py  callbacks.py  create_data.py  data.py  engine.py  evaluate_model.py  evaluation_utils.py  graph_utils.py  losses.py  train.py  train_utils.py  tune.py  tune_space.py  utils.py  yo2.py
src/models/: __init__.py  gat.py  gcn.py  gine.py  node_encoder.py  transformer.py
tests/: test_ar_epoch.py  test_ar_integration.py  test_ar_solver.py  test_ar_utils.py  test_data.py  test_edges_cross.py  test_engine.py  test_heads.py  test_losses.py  test_masking.py  test_perfect_puzzle_metrics.py  test_tracking.py  test_train.py  test_tune_space.py  test_utils.py
