[project]
name = "hashi-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hashi>=0.1.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mlflow>=3.7.0",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
]
